# jackman-py

./: .gitignore  Makefile  README.md  jackman.py  test_jackman.py
.github/workflows/: python-app.yml
dummy_cmake_proj/: CMakeLists.txt  main.cc
dummy_cmake_proj/very/deep/path/way/in/the/woods/i/think/i/saw/the/pope/back/there/: CMakeLists.txt
